<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nyc.c4q.comprehensivefinal.BreedsActivity">

    <TextView
        android:id="@+id/session_message_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/response"
        android:textSize="26sp"/>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp">

        <TextView
            android:id="@+id/terrier"
            android:text="@string/terrier"
            android:textSize="24sp"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/photo_terrier"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="right"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view2"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp">

         <TextView
            android:id="@+id/spaniel"
            android:text="@string/spaniel"
             android:textSize="24sp"
             android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/photo_spaniel"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="right"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view3"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp">

        <TextView
            android:id="@+id/retriever"
            android:text="@string/retriever"
            android:textSize="24sp"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/photo_retriever"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="right"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view4"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp">

        <TextView
            android:id="@+id/poodle"
            android:text="@string/poddle"
            android:textSize="24sp"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/photo_poodle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="right"/>

    </android.support.v7.widget.CardView>


</LinearLayout>
